# drau

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
scripts/: analyse_detection.sh  cache_audio_data.sh  drau_lib.sh  run_detection_test.sh  run_session.sh  setup.sh
src/drau/: __init__.py  env.py
src/drau/analysis/: __init__.py  __main__.py  display.py  metrics.py  plots.py  report.py
src/drau/data/: __init__.py  __main__.py  cache.py  unpack.py
src/drau/data/analytics/: __init__.py  features.py  report.py  store.py
src/drau/detection_test/: __init__.py  __main__.py  calibrate.py  form.py  hardware.py  player.py  sampler.py  session.py
src/drau/settings/: __init__.py  constants.py  env.py
