[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drau"
version = "0.1.0"
description = "Utilities for caching drone audio detection sample datasets."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "datasets>=2.20.0",
  "huggingface-hub>=0.23.0",
  "python-dotenv>=1.0.1",
  "sounddevice>=0.4.6",
  "rich>=13.0.0",
  "numpy>=1.24.0",
  "matplotlib>=3.7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
